Bug 151806 - OGG can't be selected for direct transfer in audio device configuration (first appeared as &ogg but can't be saved)
Summary: OGG can't be selected for direct transfer in audio device configuration (firs...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 1.4.7
Platform: unspecified Linux
: LO minor
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
: 149193 150367 151825 152498 152571 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-03 13:09 UTC by Marco Laverdière
Modified: 2007-11-20 13:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Laverdière 2007-11-03 13:09:42 UTC
Version:           1.4.7 (using KDE 3.5.8, Kubuntu (gutsy) 4:3.5.8-0ubuntu3.1)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.22-14-generic

Here's how to reproduce the problem, as experienced with Amarok 1.4.7 with KDE 3.5.8, on Kubuntu 7.10:

Settings -> Configure Amarok

Media Devices

Add device

Generic Audio Player

Add a name and click OK

Goto 'configure device settings' and under 'Transferring files to media 
device' try to add ogg or anything other than mp3 or wma you will see an & 
somewhere in the name eg. &ogg or a&c3 and you will not be able to save it.

(description taken for a report made on the following mailing list:  http://mail.kde.org/pipermail/amarok/2007-October/004462.html)


Thanks for your attention.
Comment 1 Harald Sitter 2007-11-03 13:36:56 UTC
We are trying to get a solution for 1.4.8
Comment 2 Jeff Mitchell 2007-11-03 13:59:44 UTC
SVN commit 732305 by mitchell:

Fix adding media types to generic device would sometimes add an ampersand and not work.

BUG: 151806


 M  +2 -0      ChangeLog  
 M  +5 -1      src/mediadevice/generic/genericmediadeviceconfigdialog.ui.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=732305
Comment 3 Seb Ruiz 2007-11-04 01:59:33 UTC
*** Bug 151825 has been marked as a duplicate of this bug. ***
Comment 4 Seb Ruiz 2007-11-08 05:32:48 UTC
*** Bug 150367 has been marked as a duplicate of this bug. ***
Comment 5 Seb Ruiz 2007-11-08 05:32:55 UTC
*** Bug 149193 has been marked as a duplicate of this bug. ***
Comment 6 Seb Ruiz 2007-11-18 05:42:26 UTC
*** Bug 152498 has been marked as a duplicate of this bug. ***
Comment 7 Seb Ruiz 2007-11-20 00:47:00 UTC
*** Bug 152571 has been marked as a duplicate of this bug. ***
Comment 8 Torquil Macdonald Sørensen 2007-11-20 10:54:12 UTC
In case anyone is interested, I managed to work around this problem by manually editing ~/.kde/share/config/amarokrc, changing

supportedFiletypes=&ogg, mp3

to 

supportedFiletypes=ogg, mp3
Comment 9 Klaus Hählen 2007-11-20 13:50:00 UTC
@Torquil Macdonald Sørensen:
Thanks a lot, you made my day!

Lausi