Fix adding media types to generic device would sometimes add an ampersand and not work.

BUG: 151806

svn path=/branches/stable/extragear/multimedia/amarok/; revision=732305